Consumo de API por medio de la barra de búsqueda, errores y mensajes de error, comenzando a mostrar la información encontrada en pantalla (ya se muestra por consola)

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,14 @@
 </head>
 
 <body>
+    <h1 class="title">Busca</h1>
+    <input type="search" id="searchBar" class="search-bar" placeholder="Busca tu país" autocomplete="off"></input>
+    <!-- <section id="results"> -->
+    <div id="show">
+        <h3 id="country"></h3>
+        <div></div>
+    </div>
+    <!-- </section> -->
 
 </body>
 <script src='index.js' type='module'></script>
