Landing funcionando, responsive, falta ajustar texto de búsqueda en mobile

--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,12 @@
 </head>
 
 <body>
-    <h1 class="title">Buscador de países</h1>
-    <input type="search" id="searchBar" class="search-bar" placeholder="Encuentra tu país" autocomplete="off"></input>
-    <section id="shows"></section>
-    <template id="showTemplate">
+    <div class="container">
+        <h1 class="title">Buscador de países</h1>
+        <img src="/img/city.png" alt="city" class="city-image">
+        <input type="search" id="searchBar" class="search-bar" placeholder="Encuentra tu país" autocomplete="off"></input>
+        <section id="shows" class="card"></section>
+        <template id="showTemplate" class="cardTemplate">
             <article class="show">
                 <h3 id="myTitle"></h3>
                 <img class="foto">
@@ -24,8 +26,7 @@
                 <p class="symbol"></p>
     </article>
     </template>
-
-
+    </div>
 </body>
 <script src='index.js' type='module'></script>
 
